db working with step function

--- a/serverless/document-processor/.aws-sam/auto-dependency-layer/template.yaml
+++ b/serverless/document-processor/.aws-sam/auto-dependency-layer/template.yaml
@@ -83,6 +83,26 @@ Resources:
             - logs:*
             Resource:
               Fn::Sub: arn:aws:logs:${AWS::Region}:${AWS::AccountId}:*
+      - PolicyName:
+          Fn::Sub: ${ProjectName}-RDSDataApiPolicy
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Effect: Allow
+            Action:
+            - rds-data:ExecuteStatement
+            - rds-data:BatchExecuteStatement
+            - rds-data:BeginTransaction
+            - rds-data:CommitTransaction
+            - rds-data:RollbackTransaction
+            Resource:
+              Fn::ImportValue: finance-doc-core-infra-aurora-cluster-arn
+          - Effect: Allow
+            Action:
+            - secretsmanager:GetSecretValue
+            - secretsmanager:DescribeSecret
+            Resource:
+              Fn::ImportValue: finance-doc-core-infra-database-secret-arn
   DocumentProcessorStateMachine:
     Type: AWS::Serverless::StateMachine
     Properties:
@@ -100,6 +120,12 @@ Resources:
           - Outputs.RequestOcrFunctionArn
         FoundationalModelId:
           Ref: FoundationalModelId
+        AuroraClusterArn:
+          Fn::ImportValue: finance-doc-core-infra-aurora-cluster-arn
+        DatabaseSecretArn:
+          Fn::ImportValue: finance-doc-core-infra-database-secret-arn
+        DatabaseName:
+          Fn::ImportValue: finance-doc-core-infra-database-name
   DocumentProcessingDLQ:
     Type: AWS::SQS::Queue
     Properties:
@@ -158,8 +184,7 @@ Resources:
             - Fn::ImportValue: finance-doc-core-infra-documents-bucket
           object:
             key:
-            - prefix: userId/documents/
-            - suffix: .pdf
+            - wildcard: userId/documents/*/*.pdf
       State: ENABLED
       Targets:
       - Id: DocumentProcessorTarget
@@ -176,6 +201,8 @@ Resources:
             Fn::GetAtt:
             - DocumentProcessingDLQ
             - Arn
+        RetryPolicy:
+          MaximumRetryAttempts: 0
         InputTransformer:
           InputPathsMap:
             bucket: $.detail.bucket.name
