--- a/serverless/web-api/v1/documents/template.yaml
+++ b/serverless/web-api/v1/documents/template.yaml
@@ -11,6 +11,8 @@ Parameters:
     Type: String
   V1Resource:
     Type: String
+  CognitoAuthorizerId:
+    Type: String
 
 Resources:
   DocumentsResource:
